# jira

./: .env_template  .gitignore  Dockerfile  README.md  app.py  helpers.py  jira.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: Create Oracle.sql  Create SQLite.sql  insert  jira_prioridade.sql  update_agrupados.sql
log/: log.py  logging.conf
models/: db.py  painel.py
