[tool.poetry]
name = "jira"
version = "1.1.1"
description = ""
authors = ["Miguel Henriques <github@jmh.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pony = "^0.7.17"
streamlit = "^1.29.0"
plotly = "^5.18.0"
atlassian-python-api = "^3.41.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
