[tool.poetry]
name = "jira"
version = "1.2.2"
description = ""
authors = [{ name = "Miguel Henriques", email = "github@jmh.com.br" }]
requires-python = ">=3.11, <4"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pony = "^0.7.17"
streamlit = "^1.29.0"
plotly = "^5.18.0"
atlassian-python-api = "^3.41.4"
schedule = "^1.2.1"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
